02-ingress-basic-path.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: basic-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: myapp.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: webapp-svc

            port:

              number: 80

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: api-svc

            port:

              number: 80
