03-ingress-host-based.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: host-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: myapp.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: webapp-svc

            port:

              number: 80

  - host: api.myapp.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: api-svc

            port:

              number: 80

  - host: admin.myapp.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: admin-svc

            port:

              number: 80
