05-ingress-full-lab.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: pathtype-demo

spec:

  ingressClassName: nginx

  rules:

  - host: myapp.local

    http:

      paths:

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: api-svc

            port:

              number: 80

      - path: /admin

        pathType: Exact

        backend:

          service:

            name: admin-svc

            port:

              number: 80

      - path: /

        pathType: Prefix

        backend:

          service:

            name: webapp-svc

            port:

              number: 80
