06-ingress-full-lab.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:


  name: lab-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 

spec:

  ingressClassName: nginx

  rules:

  - host: myapp.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: webapp-svc

            port:

              number: 80

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: api-svc

            port:

              number: 80

      - path: /admin

        pathType: Prefix

        backend:

          service:

            name: admin-svc

            port:

              number: 80
